support for coupon Code Querying as optional

--- a/src/functions/com/biz/postgres/restaurant/search.yaml
+++ b/src/functions/com/biz/postgres/restaurant/search.yaml
@@ -5,11 +5,17 @@ tasks:
     args:
       datasource: postgres
       data:
-        select:
-          id: true
-          name: true
+        include:
           menuItems: true
         where:
           location: <% inputs.body.location %>
+          menuItems: |
+                  <coffee% if inputs.body.menuItems?.couponCode then {
+                    some:
+                      couponCode:
+                        hasSome: inputs.body.menuItems.couponCode
+                  } else {
+                    couponCode: undefined
+                  }%>
       config:
         method: Restaurant.findMany
